// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows the constantFoldingPlugin to not remove used helpers when \`dev: false\` 1`] = `
"__d(function (global, _$$_REQUIRE, _$$_IMPORT_DEFAULT, _$$_IMPORT_ALL, module, exports, _dependencyMap) {
Object.defineProperty(exports, '__esModule', { value: true });
function _interopNamespace(e) {
  if (e && e.__esModule) return e;
  var n = {};
  if (e) Object.keys(e).forEach(function (k) {
    var d = Object.getOwnPropertyDescriptor(e, k);
    Object.defineProperty(n, k, d.get ? d : {
      enumerable: true,
      get: function () { return e[k]; }
    });
  });
  n.default = e;
  return n;
}
Object.defineProperty(exports, "test", { enumerable: true, get: function () { return test; } });
var _testModule = _$$_REQUIRE(_dependencyMap[0], "test-module");
var test = _interopNamespace(_testModule);



});"
`;

exports[`reports filename when encountering unsupported dynamic dependency 1`] = `"local/file.js:Invalid call at line 3: require(a)"`;

exports[`transforms a module with dependencies 1`] = `
{
  "mappings": "AAA",
  "names": [
    "<global>",
  ],
}
`;

exports[`transforms a simple module 1`] = `
{
  "mappings": "AAA",
  "names": [
    "<global>",
  ],
}
`;

exports[`transforms a simple script 1`] = `
{
  "mappings": "AAA",
  "names": [
    "<global>",
  ],
}
`;

exports[`transforms an es module with asyncToGenerator 1`] = `
"__d(function (global, _$$_REQUIRE, _$$_IMPORT_DEFAULT, _$$_IMPORT_ALL, module, exports, _dependencyMap) {
Object.defineProperty(exports, '__esModule', { value: true });
function _interopDefault(e) {
  return e && e.__esModule ? e : { default: e };
}
exports.test = test;
var _babelRuntimeHelpersAsyncToGenerator = _$$_REQUIRE(_dependencyMap[0], "@babel/runtime/helpers/asyncToGenerator");
var _asyncToGenerator = _interopDefault(_babelRuntimeHelpersAsyncToGenerator);

function test() {
	return _test.apply(this, arguments);
}
function _test() {
	_test = (0, _asyncToGenerator.default)(function* () {});
	return _test.apply(this, arguments);
}

});"
`;

exports[`transforms an es module with asyncToGenerator 2`] = `
{
  "mappings": "AAA,OC",
  "names": [
    "<global>",
    "test",
  ],
}
`;

exports[`transforms async generators 1`] = `
"__d(function (global, _$$_REQUIRE, _$$_IMPORT_DEFAULT, _$$_IMPORT_ALL, module, exports, _dependencyMap) {
Object.defineProperty(exports, '__esModule', { value: true });
function _interopDefault(e) {
  return e && e.__esModule ? e : { default: e };
}
exports.test = test;
var _babelRuntimeHelpersWrapAsyncGenerator = _$$_REQUIRE(_dependencyMap[0], "@babel/runtime/helpers/wrapAsyncGenerator");
var _wrapAsyncGenerator = _interopDefault(_babelRuntimeHelpersWrapAsyncGenerator);

function test() {
	return _test.apply(this, arguments);
}
function _test() {
	_test = (0, _wrapAsyncGenerator.default)(function* () {
		yield "ok";
	});
	return _test.apply(this, arguments);
}

});"
`;

exports[`transforms import/export syntax when experimental flag is on 1`] = `
{
  "mappings": "AAA",
  "names": [
    "<global>",
  ],
}
`;
